# generic-avr

./: Cargo.toml  flake.nix  notes.md
.cargo/: config.toml
avr-specs/: avr-atmega4809.json
src/: main.rs
