[package]
name = "generic-avr"
version = "0.1.0"
authors = ["GlennWSo <sondellglenn@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "generic-avr"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
# ruduino = {  git = "https://github.com/avr-rust/ruduino", branch = "master" }

[dependencies.atxmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "6e47364d41331f2846e4c7a2a9f9250e23b5a3c3"
features = ["atmega4809", "rt"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
